syntax = "proto3";

package proto;

option go_package = "/api";

message HealthCheckRequest {
  string node = 1;
}

message HealthCheckResponse {
  enum Status {
    UNKNOWN = 0;
    SERVING_NOT_CONNECTED = 1;
    SERVING_CONNECTED = 2;
    NOT_SERVING = 3;
  }
  Status status = 1;
}

message Message {
  string Name = 1;
  string message = 2;
}

message ServeResponse {
  bool ok = 1;
}

service Node {
  rpc SendStream(stream Message) returns (stream Message) {}
  rpc Send(Message) returns (Message) {}
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Connected(HealthCheckRequest) returns (ServeResponse);
  rpc Disconnected(HealthCheckRequest) returns (ServeResponse);
}