syntax = "proto3";

// protoc --proto_path=grpc --go_out=. grpc/proto/health.proto
// protoc --proto_path=grpc --go-grpc_out=. grpc/proto/health.proto

package proto;

option go_package = "/grpc";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

message ServeResponse {
  bool ok = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Connected(HealthCheckRequest) returns (ServeResponse);
}